# tkinter-frame-player

./: LICENSE  README.md  main.py  requirements.txt  setup.cfg
src/tkinter_frame_player/: __init__.py  main.py
