[metadata]
name = tkinter-frame-player
version = 0.1.0
description = Simple Tkinter frame video player
author = Pritom Gogoi
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
include_package_data = True
install_requires =
    opencv-python
    pillow

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    frame-player = tkinter_frame_player.main:main